--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -77,5 +77,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/B-JCoder/ANA.git"
+  },
+  "bugs": {
+    "url": "https://github.com/B-JCoder/ANA/issues"
+  },
+  "homepage": "https://github.com/B-JCoder/ANA#readme",
   "description": ""
 }
